src/objects/zqu__ZSyncSchemaValue__c.object
<CustomObject>
    <description>Zuora Sync Schema value.</description>
    <fields>
        <fullName>zqu__SfdcFieldValue__c</fullName>
        <description>Salesforce field value</description>
        <label>SfdcFieldValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ZFieldValue__c</fullName>
        <description>Zuora Field Value</description>
        <label>ZFieldValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ZSyncSchema__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>look up to related ZSync Schema</description>
        <label>ZSyncSchema</label>
        <referenceTo>zqu__ZSyncSchema__c</referenceTo>
        <relationshipLabel>ZSyncSchemaValues</relationshipLabel>
        <relationshipName>ZSyncSchemaValues</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ZSyncSchemaValue</label>
    <nameField>
        <label>ZSyncSchemaValue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZSyncSchemaValues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>